manifest/bhasai/auth-service/deployment-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-service
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: env-secret
          image: ghcr.io/bharatsahaiyak/auth-service:dev
          name: auth-service
          resources:
            limits:
              memory: "1073741824"
      restartPolicy: Always
