manifest/bhasai/auth-service/ingress-auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "auth-service.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 80
